[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/Scorpiu.png" type="Texture" id=1]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scorpiu.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 6 ) ],
"loop": false,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": false,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Walk",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10.5, 5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 13, 5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 19.5, 5.5 )

[node name="Scorpiu" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -12 )
frames = SubResource( 4 )
animation = "Walk"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -5 )
shape = SubResource( 5 )

[node name="LedgeCheckRight" type="RayCast2D" parent="."]
position = Vector2( -10, -2 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="LedgeCheckLeft" type="RayCast2D" parent="."]
position = Vector2( 11, -2 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="Hitbox" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -1, -7 )
shape = SubResource( 8 )

[node name="HurtArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea"]
position = Vector2( -0.5, -6.5 )
shape = SubResource( 9 )

[node name="RemoveTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="HurtArea" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="RemoveTimer" to="." method="_on_RemoveTimer_timeout"]
